Use Java 11 in graphadmin
- switch compiler version and base image to Java 11
- remove com.sun.jersey (Jersey 1) dependencies
- replace heap_size jvm args with MaxRAMPercentage to scale dynamically with the K8s limits

Issue-ID: AAI-4001
Change-Id: I17d126cf9972bad4c851a374113845be77fee9f6
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>